--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.57.8",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
+    "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
